--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "dayjs": "^1.11.7",
     "react": "18.2.0",
     "react-native": "0.71.6",
+    "react-native-config": "^1.5.0",
     "react-native-confirmation-code-field": "^7.3.1",
     "react-native-dropdown-select-list": "^2.0.4",
     "react-native-linear-gradient": "^2.6.2",
