--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
     "dayjs": "^1.11.7",
     "react": "18.2.0",
     "react-native": "0.71.6",
-    "react-native-config": "^1.5.0",
     "react-native-confirmation-code-field": "^7.3.1",
     "react-native-dropdown-select-list": "^2.0.4",
     "react-native-linear-gradient": "^2.6.2",
@@ -39,6 +38,7 @@
     "@types/jest": "^26.0.23",
     "@types/react": "^18.0.21",
     "@types/react-native": "^0.70.6",
+    "@types/react-native-dotenv": "^0.2.0",
     "@types/react-native-vector-icons": "^6.4.13",
     "@types/react-test-renderer": "^18.0.0",
     "@typescript-eslint/eslint-plugin": "^5.37.0",
@@ -48,6 +48,7 @@
     "eslint": "^7.32.0",
     "jest": "^26.6.3",
     "metro-react-native-babel-preset": "0.72.3",
+    "react-native-dotenv": "^3.4.8",
     "react-native-svg-transformer": "^1.0.0",
     "react-test-renderer": "18.1.0",
     "typescript": "^4.8.3"
