--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "@react-native-community/checkbox": "^0.5.15",
     "@react-native-community/datetimepicker": "^7.0.0",
     "@react-native-firebase/app": "^17.4.0",
     "@react-native-firebase/auth": "^17.4.0",
