--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "react-native start",
     "test": "jest",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
-    "generate": "graphql-codegen --config codegen.ts"
+    "generate": "graphql-codegen --config codegen.ts",
+    "generate-check": "graphql-codegen --check"
   },
   "dependencies": {
     "@apollo/client": "^3.7.14",
@@ -23,6 +24,7 @@
     "@react-navigation/stack": "^6.3.16",
     "@rnmapbox/maps": "github:rnmapbox/maps",
     "dayjs": "^1.11.7",
+    "dotenv": "^16.1.1",
     "graphql": "^16.6.0",
     "react": "18.2.0",
     "react-native": "0.71.6",
