--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,6 @@
     "paths": {
       "@src/*": ["src/*"],
     },
-    "typeRoots": ["/node_modules/@types","./src/types"],
+    "typeRoots": ["./src/types"],
   },
 }
