--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-native-screens": "^3.20.0",
     "react-native-svg": "^13.9.0",
     "react-native-vector-icons": "^9.2.0",
+    "react-native-vision-camera": "^2.15.4",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
