--- a/android/build.gradle
+++ b/android/build.gradle
@@ -4,6 +4,7 @@ buildscript {
     ext {
         buildToolsVersion = "31.0.0"
         minSdkVersion = 21
+        kotlinVersion = "1.7.0"
         compileSdkVersion = 31
         targetSdkVersion = 31
         RNMapboxMapsImpl = "mapbox" // required for v10
