--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-native-confirmation-code-field": "^7.3.1",
     "react-native-dropdown-select-list": "^2.0.4",
     "react-native-geolocation-service": "^5.3.1",
+    "react-native-get-random-values": "^1.9.0",
     "react-native-linear-gradient": "^2.6.2",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.20.0",
