add: new package graphql websocket

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "dayjs": "^1.11.7",
     "dotenv": "^16.1.1",
     "graphql": "^16.6.0",
+    "graphql-ws": "^5.13.1",
     "react": "18.2.0",
     "react-native": "0.71.6",
     "react-native-confirmation-code-field": "^7.3.1",
